# STEMBOOST

./: .gitignore  README.md  Requirement Elicitation.docx  accessibility_audit.md  pyproject.toml  requirements.txt  rubric-notes.txt
docs/: ai_uc1.drawio  educator_use_case.drawio  learner_use_case.drawio  mentor_use_case.drawio  seq.drawio
stemboost/: __main__.py  main.py
stemboost/controllers/: auth_controller.py  educator_controller.py  learner_controller.py  mentor_controller.py
stemboost/data/: seed_data.py  stemboost.db
stemboost/models/: assessment.py  constants.py  course.py  opportunity.py  progress.py  user.py  user_factory.py
stemboost/repositories/: assignment_repository.py  content_repository.py  course_repository.py  learning_path_repository.py  opportunity_repository.py  progress_repository.py  user_repository.py
stemboost/services/: accessibility_service.py  data_service.py  interfaces.py  observer.py  tts_service.py
stemboost/views/: educator_view.py  hotkeys.py  learner_view.py  login_view.py  mentor_view.py  view_context.py  widgets.py
tests/: conftest.py  test_learner_requirements.py  test_mentor_educator_requirements.py  test_progress_tts.py  test_system_requirements.py
