[project]
name = "stemboost"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.6",
    "piper-tts>=1.4.2",
    "sounddevice>=0.5.5",
]

[project.optional-dependencies]
pytts = [
    "pyttsx3>=2.90",
]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
